<resources>
    <string name="app_name">Buggy Bank</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Login</string>
    <string name="are_you_new_sign_up">are you new sign up?</string>
    <string name="Login">Login</string>
    <string name="password">PASSWORD</string>
    <string name="Username">USERNAME</string>
    <string name="Register">Register</string>
    <string name="register">Register</string>
    <string name="already_registered_login">already registered login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="Sign_in">Sign In</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_button">Sign up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="comform_password">Comform Password</string>
    <string name="Welcome_User">Welcome\nUser</string>

    <string name="my_wallet">My Wallet</string>
    <string name="r_1000_00">R 1000 .00</string>
    <string name="expense">+_expense</string>
    <string name="Viewexpense">View Expense</string>
    <string name="Addexpense">Add Expense</string>
    <string name="analysis">Analysis</string>
    <string name="Income">Income vs Expense</string>
    <string name="graph">Graph</string>
    <string name="ViewReport">View Report</string>

    <!-- strings.xml -->
    <string name="buggy_bank">
        BUGGY BANK
    </string>
    <string name="Sign_Up">Sign Up</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="submit">Submit</string>
    <string name="logo">Logo</string>
    <string name="conform_password">Confirm Password</string>

    <!--Strings for side nav menu bar-->
    <string name="open">Open</string>string>
    <string name="close">Close</string>string>
</resources>